--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/animalshelter
+spring.datasource.url=jdbc:postgresql://localhost:5432/fosterstory
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
