--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>com.tumblr</groupId>
+			<artifactId>jumblr</artifactId>
+			<version>0.0.11</version>
+		</dependency>
     </dependencies>
 
 	<build>
