Part way through Sping upgrade

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/fosterstory
+spring.datasource.url=jdbc:postgresql://localhost:5432/fosterstory?user=postgres&password=postgres
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 logging.level.root=info
